{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 53,
  "lineage": "16cb8493-28d0-9b4e-16d3-d95d066a340b",
  "resources": [
    {
      "module": "module.eks_infra.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:security-group/sg-049a1931aa5103d55",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049a1931aa5103d55",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0ba738aedc4abbe"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "saliha-eks-cluster2025052611224950230000000b",
            "name_prefix": "saliha-eks-cluster",
            "owner_id": "120569636577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "saliha-eks-cluster-eks_cluster_sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-eks-cluster-eks_cluster_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_infra.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:security-group/sg-0d0ba738aedc4abbe",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0ba738aedc4abbe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049a1931aa5103d55"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049a1931aa5103d55"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "saliha-eks-cluster2025052611224947500000000a",
            "name_prefix": "saliha-eks-cluster",
            "owner_id": "120569636577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "saliha-eks-cluster-eks_worker_sg",
              "Terraform": "true",
              "kubernetes.io/cluster/saliha-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-eks-cluster-eks_worker_sg",
              "Terraform": "true",
              "kubernetes.io/cluster/saliha-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_infra.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1099039488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-049a1931aa5103d55",
            "security_group_rule_id": "sgr-0d56927ddb282615d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.eks.aws_security_group.cluster",
            "module.eks_infra.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_infra.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2010466561",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-049a1931aa5103d55",
            "security_group_rule_id": "sgr-09d4b9d978d06d613",
            "self": false,
            "source_security_group_id": "sg-0d0ba738aedc4abbe",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.eks.aws_security_group.cluster",
            "module.eks_infra.module.eks.aws_security_group.workers",
            "module.eks_infra.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_infra.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-4147662241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d0ba738aedc4abbe",
            "security_group_rule_id": "sgr-0b043ea560d2c21a2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.eks.aws_security_group.workers",
            "module.eks_infra.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_infra.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-284374241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d0ba738aedc4abbe",
            "security_group_rule_id": "sgr-0b828de5e1f4060e5",
            "self": false,
            "source_security_group_id": "sg-049a1931aa5103d55",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.eks.aws_security_group.cluster",
            "module.eks_infra.module.eks.aws_security_group.workers",
            "module.eks_infra.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_infra.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-190958985",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d0ba738aedc4abbe",
            "security_group_rule_id": "sgr-0e7924f9f3cb092ab",
            "self": false,
            "source_security_group_id": "sg-049a1931aa5103d55",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.eks.aws_security_group.cluster",
            "module.eks_infra.module.eks.aws_security_group.workers",
            "module.eks_infra.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_infra.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3705974728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d0ba738aedc4abbe",
            "security_group_rule_id": "sgr-079fab8d88f86158a",
            "self": false,
            "source_security_group_id": "sg-0d0ba738aedc4abbe",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.eks.aws_security_group.workers",
            "module.eks_infra.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:network-acl/acl-01ce27c0c0cd77381",
            "default_network_acl_id": "acl-01ce27c0c0cd77381",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01ce27c0c0cd77381",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "120569636577",
            "subnet_ids": [
              "subnet-055a14bf206a85d7d",
              "subnet-05e076d6be9b9037a",
              "subnet-0a6faeac7b01568a3",
              "subnet-0c3ff6ddba1d3e756",
              "subnet-0d035c4bd6228bb69",
              "subnet-0e0b484cce11a3070"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:route-table/rtb-04e684a4838d3b185",
            "default_route_table_id": "rtb-04e684a4838d3b185",
            "id": "rtb-04e684a4838d3b185",
            "owner_id": "120569636577",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:security-group/sg-0849053d953e8f96f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0849053d953e8f96f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "120569636577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e617c7069be2d2b0",
            "arn": "arn:aws:ec2:eu-west-3:120569636577:elastic-ip/eipalloc-0e617c7069be2d2b0",
            "association_id": "eipassoc-01f7f63d5d789c67a",
            "domain": "vpc",
            "id": "eipalloc-0e617c7069be2d2b0",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-005fad046a5d7a412",
            "private_dns": "ip-10-0-101-165.eu-west-3.compute.internal",
            "private_ip": "10.0.101.165",
            "public_dns": "ec2-35-181-29-208.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.29.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-eu-west-3a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-eu-west-3a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_internet_gateway.this",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:internet-gateway/igw-0add3c404832fd551",
            "id": "igw-0add3c404832fd551",
            "owner_id": "120569636577",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e617c7069be2d2b0",
            "association_id": "eipassoc-01f7f63d5d789c67a",
            "connectivity_type": "public",
            "id": "nat-0b02012c87c79a49e",
            "network_interface_id": "eni-005fad046a5d7a412",
            "private_ip": "10.0.101.165",
            "public_ip": "35.181.29.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05e076d6be9b9037a",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-eu-west-3a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-eu-west-3a",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_eip.nat",
            "module.eks_infra.module.vpc.aws_internet_gateway.this",
            "module.eks_infra.module.vpc.aws_subnet.public",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b6658d9b79e063ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b02012c87c79a49e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6658d9b79e063ab",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_eip.nat",
            "module.eks_infra.module.vpc.aws_internet_gateway.this",
            "module.eks_infra.module.vpc.aws_nat_gateway.this",
            "module.eks_infra.module.vpc.aws_route_table.private",
            "module.eks_infra.module.vpc.aws_subnet.public",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0add3c404832fd551",
            "id": "r-rtb-05fef5d51ea2effbb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05fef5d51ea2effbb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_internet_gateway.this",
            "module.eks_infra.module.vpc.aws_route_table.public",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:route-table/rtb-0b6658d9b79e063ab",
            "id": "rtb-0b6658d9b79e063ab",
            "owner_id": "120569636577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b02012c87c79a49e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:route-table/rtb-05fef5d51ea2effbb",
            "id": "rtb-05fef5d51ea2effbb",
            "owner_id": "120569636577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0add3c404832fd551",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0116dd9ba856af8a8",
            "route_table_id": "rtb-0b6658d9b79e063ab",
            "subnet_id": "subnet-055a14bf206a85d7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_route_table.private",
            "module.eks_infra.module.vpc.aws_subnet.private",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006596e649fbfda49",
            "route_table_id": "rtb-0b6658d9b79e063ab",
            "subnet_id": "subnet-0a6faeac7b01568a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_route_table.private",
            "module.eks_infra.module.vpc.aws_subnet.private",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fab53fedbb4be25c",
            "route_table_id": "rtb-0b6658d9b79e063ab",
            "subnet_id": "subnet-0c3ff6ddba1d3e756"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_route_table.private",
            "module.eks_infra.module.vpc.aws_subnet.private",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baa6652b46d96ee2",
            "route_table_id": "rtb-05fef5d51ea2effbb",
            "subnet_id": "subnet-05e076d6be9b9037a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_route_table.public",
            "module.eks_infra.module.vpc.aws_subnet.public",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029d3ca9c3ef3d13b",
            "route_table_id": "rtb-05fef5d51ea2effbb",
            "subnet_id": "subnet-0e0b484cce11a3070"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_route_table.public",
            "module.eks_infra.module.vpc.aws_subnet.public",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6042f307634447c",
            "route_table_id": "rtb-05fef5d51ea2effbb",
            "subnet_id": "subnet-0d035c4bd6228bb69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_route_table.public",
            "module.eks_infra.module.vpc.aws_subnet.public",
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:subnet/subnet-055a14bf206a85d7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055a14bf206a85d7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569636577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-private-eu-west-3a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-private-eu-west-3a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:subnet/subnet-0a6faeac7b01568a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6faeac7b01568a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569636577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-private-eu-west-3b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-private-eu-west-3b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:subnet/subnet-0c3ff6ddba1d3e756",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3ff6ddba1d3e756",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569636577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-private-eu-west-3c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-private-eu-west-3c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:subnet/subnet-05e076d6be9b9037a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e076d6be9b9037a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569636577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-public-eu-west-3a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-public-eu-west-3a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:subnet/subnet-0e0b484cce11a3070",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0b484cce11a3070",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569636577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-public-eu-west-3b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-public-eu-west-3b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:subnet/subnet-0d035c4bd6228bb69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d035c4bd6228bb69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569636577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc-public-eu-west-3c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc-public-eu-west-3c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c9a5dbd137c089d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.module.vpc.aws_vpc.this",
            "module.eks_infra.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120569636577:vpc/vpc-0c9a5dbd137c089d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ce27c0c0cd77381",
            "default_route_table_id": "rtb-04e684a4838d3b185",
            "default_security_group_id": "sg-0849053d953e8f96f",
            "dhcp_options_id": "dopt-0b8330473675f4427",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9a5dbd137c089d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e684a4838d3b185",
            "owner_id": "120569636577",
            "tags": {
              "Environment": "dev",
              "Name": "saliha-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "saliha-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}